# FinAgent

./: .gitignore  README.md
.github/workflows/: ci.yml
finagent/: alembic.ini  docker-compose.yml  pyproject.toml  run_live_macro.py
finagent/.github/workflows/: ci.yml
finagent/agents_scripts/: run_live_company.py  run_live_editor.py  run_live_macro.py  run_live_quant.py  smoke_test_risk.py
finagent/alembic/: env.py
finagent/alembic/versions/: 2a49b8907a51_initial_schema.py
finagent/app/: main.py
finagent/app/agents/: company.py  editor.py  macro.py  quant.py  risk.py
finagent/app/api/: deps.py  routes.py
finagent/app/core/: config.py  logging_config.py
finagent/app/db/: models.py  session.py
finagent/app/graph/: builder.py  state.py
finagent/app/prompts/: company_agent_system.txt  company_agent_user.txt  editor_agent_system.txt  editor_agent_user.txt  macro_agent.txt  quant_agent_system.txt  quant_agent_user.txt  risk_agent_system.txt  risk_agent_user.txt
finagent/app/prompts/services/: prompt_loader.py
finagent/app/schemas/: analysis.py
finagent/app/services/: analysis.py
finagent/app/utils/: data_preprocessing.py
finagent/scripts/: init_graph.sql
finagent/tests/: test_config.py
finagent/tests/integration/: test_agents.py  test_pipeline.py
finagent/tests/unit/: test_builder.py  test_company.py  test_editor.py  test_macro.py  test_quant.py  test_risk.py  test_utils.py
